fix: consolidate tenant APIs
